<resources>
    <string name="app_name">Memory Game</string>
    <string name="M_LTitulo">Jogo da Memória</string>
    <string name="M_BSolitario">Um Jogador</string>
    <string name="M_B2jogadores">Dois Jogadores</string>
    <string name="M_BRede">Em Rede</string>
    <string name="M_BOpcoes">Opções</string>
    <string name="M_BSobre">Sobre</string>
    <string name="S_LSobre">Sobre</string>
    <string name="S_LIsec">Instituto Superior de Engenharia de Coimbra</string>
    <string name="S_LUnic">Aplicações Móveis</string>
    <string name="S_LNome1">David Julião, 21230100</string>
    <string name="S_LNome2">Luís Antunes, 21230122</string>
    <string name="M_BHistorico">Histórico</string>
    <string name="O_LOpcoes">Opções</string>
    <string name="O_LNivel">Dificuldade:</string>
    <string name="O_LClique">Clique:</string>
    <string name="O_LTempo">Tempo:</string>
    <string name="SPIN_LTituloIns">Insere Nome</string>
    <string name="SPIN_BJogar">Jogar</string>
    <string name="SP_BVMenu">Menu Inicial</string>
    <string-array name="dropNivel">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="dropClick">
        <item>Simples</item>
        <item>Longo</item>
        <item>Duplo</item>
    </string-array>
    <string name="SP_MPara">Parabéns!</string>
    <string name="SP_MJogadas">Jogadas:</string>
    <string name="SP_LTempo">Tempo:</string>
    <string name="SP_LPontuacao">Pontuação:</string>
    <string name="SP_BJOVez">Jogar Outra Vez</string>
    <string name="MP_LNomes">Inserir Nomes</string>
    <string name="MP_LJog1">Jogador 1:</string>
    <string name="MP_LJog2">Jogador 2:</string>
    <string name="MP_BJogar">Jogar</string>
    <string name="SPIN_LJogador">Nome Jogador</string>
    <string name="MP_LJogadas">Jogadas:</string>
    <string name="MP_LJogador1">Jog1:</string>
    <string name="MP_LJogador2">Jog2:</string>
    <string name="FM_LParabens">Parabéns</string>
    <string name="FM_LJogadas">Num. Jogadas:</string>
    <string name="FM_LTempo">Tempo:</string>
    <string name="FM_LPontuacao">Pontos:</string>
    <string name="FM_BJogar">Jogar Outra Vez</string>
    <string name="FM_BMenu">Voltar ao Menu</string>
    <string name="SPJ_LJogadas">Jogadas:</string>
    <string name="SPJ_LNome">Nome:</string>
    <string name="SPJ_LPontos">Pontos:</string>
    <string name="Err_FaltaNome">É necessário escrever um nome para jogar!</string>
    <string name="Err_Nomegrande">Nome demasiado grande. Só pode conter 12 carateres.</string>
    <string name="Err_Nomrgrande7">Nome demasiado grande. Só pode conter 7 carateres.</string>
    <string name="Err_Nomeigual">Nomes iguais. Altere um dos nomes.</string>
    <string name="JogadorAJogar">Vez do </string>
    <string name="FM_LEmpate">Empate!</string>
    <string name="AI_TituloImage">Adiciona Imagem</string>
    <string name="AI_addImage">Adiciona</string>
    <string name="AI_procuraImage">Procurar</string>
    <string name="Err_FaltaImage">Necessário procurar imagem, só depois pode adicionar.</string>
    <string name="AI_removeImage">Eliminar</string>
    <string name="GA_LTitulo">Galeria</string>
    <string name="GA_BAddGallery">Adicionar</string>
    <string name="GA_BEditGallery">Editar</string>
    <string name="GA_BRemGallery">Remover</string>
    <string name="GA_LGalleryCompleta">Completa</string>
    <string name="Err_NoneSelected">Selecione um elemento primeiro</string>
    <string name="MSG_Box">De certeza?</string>
    <string name="MSG_Box_yes">Sim</string>
    <string name="MSG_Box_no">Não</string>
    <string name="AG_LTitulo">Adiciona galeria</string>
    <string name="AG_BAdd">Adicionar</string>
    <string name="Err_Nomeexistente">Galeria com nome igual, introduza um novo.</string>
    <string name="PO_LTitulo">Opções Imagem</string>
    <string name="PO_BRemove">Remover Image</string>
    <string name="PO_BCarta">Definir Parte de trás da carta</string>
    <string name="PO_BPar">Definir par intruso</string>
    <string name="PO_BCancel">Cancelar</string>
    <string name="Err_ExcessoImage">Já não pode adicionar mais imagens. Remova uma primeiro.</string>
    <string name="PO_BRemParteCarta">Remover parte de trás da carta</string>
    <string name="PO_BRemParIntruso">Remover de pares intrusos</string>
    <string name="Err_ExcessoPar">Já não pode adicionar mais pares. Limite é 5.</string>
    <string name="OP_LGallery">Galeria:</string>
    <string name="Err_ImageAdd">Imagem já adicionada.</string>
    <string name="OP_LGerir">Gerir Galerias</string>
    <string name="OP_LTempo">Definir Tempo</string>
    <string name="OP_AddTempo">Adicionar</string>
    <string name="OP_Cancel">Cancelar</string>
    <string name="nomeRede">Nome:</string>
    <string name="cjRede">Criar Jogo</string>
    <string name="jjRede">Juntar a Jogo</string>
    <string name="ER_LTitulo">Rede</string>
    <string name="ER_BJoin">Entrar num Jogo</string>
    <string name="ER_BHost">Criar Jogo</string>
    <string name="HG_LTitulo">Opções de Jogo</string>
    <string name="HG_LLin">Linhas:</string>
    <string name="HG_LCol">Colunas:</string>
    <string name="HG_LIp">IP:</string>
    <string name="HG_LPar">P. Intruso:</string>
    <string name="HG_Num">Número:</string>
    <string name="Err_NoConnection">Sem conexão há internet!</string>
    <string name="Err_NoOne">Ninguém se juntou ao jogo!</string>
    <string name="GA_waitPl">À espera de jogador...</string>
    <string name="GA_Aguarde">Aguarde...</string>
    <string name="JG_LJoin">Entra no Jogo</string>
    <string name="JG_Nome">Nome</string>
    <string name="JG_LIP">IP</string>
    <string name="Err_UnableConnect">Impossível de conectar!</string>
    <string name="SV_Titulo">Servidor</string>
    <string name="SV_Nome">Nome:</string>
    <string name="SV_Col">Colunas:</string>
    <string name="SV_Lin">Linhas:</string>
    <string name="SV_Num">Número:</string>
    <string name="SV_Host">Cria Jogo</string>
    <string name="SV_Cancel">Cancelar</string>
    <string name="CL_Titulo">Cliente</string>
    <string name="FGA_Tempo">Tempo:</string>
    <string name="FGA_Again">Jogar outra vez</string>
    <string name="FGA_Main">Menu Inicial</string>
    <string name="Err_GameOver">O jogo foi terminado!</string>
</resources>
