<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="isec.memorygame.GalleryActivity"
    android:background="#a1b9a3">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/G_LTitulo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/GA_LTitulo"
        android:textSize="35sp"
        android:paddingBottom="15dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/galleryList"
        android:layout_below="@+id/G_LTitulo"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/addGallery"
        android:choiceMode="singleChoice"
        android:paddingBottom="20dp"
        android:listSelector="@android:color/darker_gray"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GA_BAddGallery"
        android:id="@+id/addGallery"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GA_BEditGallery"
        android:id="@+id/editGallery"
        android:layout_below="@+id/galleryList"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GA_BRemGallery"
        android:id="@+id/removeGallery"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
