<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/popup"
    android:background="#f48e8e8e">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_marginBottom="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PO_LTitulo"
                android:id="@+id/PO_LTitulo"
                android:textSize="25sp"
                android:paddingTop="10dp"
                android:paddingBottom="15dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/PO_Image"
                android:layout_below="@+id/PO_LTitulo"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PO_BRemove"
                android:id="@+id/PO_BRemove"
                android:layout_below="@+id/PO_Image"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PO_BCarta"
                android:id="@+id/PO_BDefineCarta"
                android:layout_below="@+id/PO_BRemove"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PO_BPar"
                android:id="@+id/PO_BDefinePar"
                android:layout_below="@+id/PO_BDefineCarta"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/PO_BCancel"
                android:id="@+id/PO_BCancel"
                android:layout_below="@+id/PO_BDefinePar"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>