<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="isec.memorygame.EmRedeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ER_LTitulo"
        android:id="@+id/ER_LTitulo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:paddingTop="15sp"
        android:paddingBottom="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/ER_BJoin"
        android:id="@+id/ER_BJoin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/ER_BHost"
        android:id="@+id/ER_BHost"
        android:layout_above="@+id/ER_BJoin"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />
</RelativeLayout>
