<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="isec.memorygame.SobreActivity"
    android:background="#a1b9a3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/S_LSobre"
        android:id="@+id/labelsobre"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:layout_below="@+id/labelsobre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#ffffff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/isecimg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S_LUnic"
            android:id="@+id/uclabel"
            android:textSize="25sp"
            android:layout_below="@+id/isecimg"
            android:layout_alignRight="@+id/aluno1"
            android:layout_alignEnd="@+id/aluno1"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S_LNome1"
            android:id="@+id/aluno1"
            android:textSize="20sp"
            android:layout_marginBottom="124dp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/aluno2"
            android:layout_alignStart="@+id/aluno2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/S_LNome2"
            android:id="@+id/aluno2"
            android:textSize="20dp"
            android:textIsSelectable="false"
            android:layout_marginTop="40dp"
            android:layout_alignTop="@+id/aluno1"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</RelativeLayout>
