<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="isec.memorygame.JoinGameActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JG_LJoin"
        android:id="@+id/JG_EntraJogo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JG_Nome"
        android:id="@+id/JG_Nome"
        android:textSize="25dp"
        android:layout_below="@+id/JG_EntraJogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/JG_Nome"
        android:ems="10"
        android:id="@+id/JG_ENome"
        android:layout_below="@+id/JG_Nome"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JG_LIP"
        android:id="@+id/JG_LIP"
        android:textSize="25sp"
        android:layout_below="@+id/JG_ENome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/JG_LIP"
        android:ems="10"
        android:id="@+id/JG_EIp"
        android:layout_below="@+id/JG_LIP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ER_BJoin"
        android:id="@+id/JG_BJoin"
        android:layout_below="@+id/JG_EIp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="17dp" />
</RelativeLayout>
